k8s/base/apps/backend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    istio.io/rev: 1-27-0
