k8s/base/apps/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        sidecar.istio.io/inject: "true" # Ensure Istio sidecar is injected
    spec:
      containers:
      - name: backend
        image: niteesh20/myapp-backend:latest
        ports:
        - containerPort: 8093
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
